--- a/index.html
+++ b/index.html
@@ -21,29 +21,32 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
-        <ul class="navigation">
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            ><br />
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="container header">
+      <div class="container page-header-container">
+        <nav class="header-nav">
+          <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+          <ul class="navigation">
+            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <address class="address">
+          <ul class="adress-uli">
+            <li>
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ><br />
+            </li>
+            <li>
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
@@ -51,157 +54,184 @@
         <h1 class="first-heading">Effective Solutions for Your Business</h1>
         <button class="order-service-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2 class="content">Content</h2>
-        <ul>
-          <li>
-            <h3 class="content-list-heading">Strategy</h3>
-            <p class="content-list-paragraf">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="content-list-heading">Punctuality</h3>
-            <p class="content-list-paragraf">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="content-list-heading">Diligence</h3>
-            <p class="content-list-paragraf">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="content-list-heading">Technologies</h3>
-            <p class="content-list-paragraf">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="our-team-section">
-        <h2 class="our-team-heading">Our Team</h2>
-
-        <ul>
-          <li class="our-team-list">
-            <img
-              src="./images/img-3.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-job">Product Designer</p>
-          </li>
-
-          <li class="our-team-list">
-            <img
-              src="./images/img-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-job">Frontend Developer</p>
-          </li>
-
-          <li class="our-team-list">
-            <img
-              src="./images/img-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-job">Marketing</p>
-          </li>
-
-          <li class="our-team-list">
-            <img
-              src="./images/img.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-job">UI Designer</p>
-          </li>
-        </ul>
-      </section>
 
       <section>
-        <h2 class="our-portfolio-heading">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/our-portfolio/img-1.jpg"
-              alt="Bank App"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Banking App</h3>
-            <p class="list-item-paragraf">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Cashless Payment</h3>
-            <p class="list-item-paragraf">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-3.jpg"
-              alt="Laptop"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Meditation App</h3>
-            <p class="list-item-paragraf">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-4.jpg"
-              alt="Taxi"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Taxi Service</h3>
-            <p class="list-item-paragraf">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Screen Illustrations</h3>
-            <p class="list-item-paragraf">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/our-portfolio/img-6.jpg"
-              alt="Woman"
-              width="360"
-              height="300"
-            />
-            <h3 class="list-item-heading">Online Courses</h3>
-            <p class="list-item-paragraf">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading-first">Content</h2>
+          <ul class="content-list">
+            <li class="content-list-item">
+              <h3 class="content-list-heading">Strategy</h3>
+              <p class="content-list-paragraf">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+
+            <li class="content-list-item">
+              <h3 class="content-list-heading">Punctuality</h3>
+              <p class="content-list-paragraf">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+
+            <li class="content-list-item">
+              <h3 class="content-list-heading">Diligence</h3>
+              <p class="content-list-paragraf">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+
+            <li class="content-list-item">
+              <h3 class="content-list-heading">Technologies</h3>
+              <p class="content-list-paragraf">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="our-team-section container">
+        <div class="container">
+          <h2 class="our-team-heading">Our Team</h2>
+
+          <ul class="our-team-uli">
+            <li class="our-team-list">
+              <img
+                src="./images/img-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-nfo">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-job">Product Designer</p>
+              </div>
+            </li>
+
+            <li class="our-team-list">
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-nfo">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-job">Frontend Developer</p>
+              </div>
+            </li>
+
+            <li class="our-team-list">
+              <img
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-nfo">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-job">Marketing</p>
+              </div>
+            </li>
+
+            <li class="our-team-list">
+              <img
+                src="./images/img.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-nfo">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-job">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <h2 class="our-portfolio-heading">Our Portfolio</h2>
+          <ul class="our-portfolio-ul">
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-1.jpg"
+                alt="Bank App"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Banking App</h3>
+                <p class="list-item-paragraf">App</p>
+              </div>
+            </li>
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Cashless Payment</h3>
+                <p class="list-item-paragraf">Marketing</p>
+              </div>
+            </li>
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-3.jpg"
+                alt="Laptop"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Meditation App</h3>
+                <p class="list-item-paragraf">App</p>
+              </div>
+            </li>
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-4.jpg"
+                alt="Taxi"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Taxi Service</h3>
+                <p class="list-item-paragraf">Marketing</p>
+              </div>
+            </li>
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Screen Illustrations</h3>
+                <p class="list-item-paragraf">Design</p>
+              </div>
+            </li>
+            <li class="our-portfolio-li">
+              <img
+                src="./images/our-portfolio/img-6.jpg"
+                alt="Woman"
+                width="360"
+                height="300"
+              />
+              <div class="our-portfolio-text-container">
+                <h3 class="list-item-heading">Online Courses</h3>
+                <p class="list-item-paragraf">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
