--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container header">
+    <header class="header">
       <div class="container page-header-container">
         <nav class="header-nav">
           <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
@@ -51,11 +51,13 @@
 
     <main>
       <section class="effective-solutions-section">
-        <h1 class="first-heading">Effective Solutions for Your Business</h1>
-        <button class="order-service-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="first-heading">Effective Solutions for Your Business</h1>
+          <button class="order-service-btn" type="button">Order Service</button>
+        </div>
       </section>
 
-      <section>
+      <section class="section-content">
         <div class="container">
           <h2 class="heading-first">Content</h2>
           <ul class="content-list">
@@ -154,7 +156,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="our-portfolio-section">
         <div class="container">
           <h2 class="our-portfolio-heading">Our Portfolio</h2>
           <ul class="our-portfolio-ul">
@@ -236,13 +238,15 @@
     </main>
 
     <footer class="page-footer-title">
-      <a class="logo" href="/"
-        >Web<span class="logo-part-footer">Studio</span></a
-      >
-      <p class="footer-paragraf">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo-footer" href="/"
+          >Web<span class="logo-part-footer">Studio</span></a
+        >
+        <p class="footer-paragraf">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
