--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </section>
 
-      <section class="our-team-section container">
+      <section class="our-team-section">
         <div class="container">
           <h2 class="our-team-heading">Our Team</h2>
 
